--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,17 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <link rel="stylesheet" type="text/css" href="./global.css" />
-  <title>용택보미선호</title>
+
+  <meta property="og:title" content="선호의 첫 생일 파티에 초대합니다.">
+  <meta property="og:image"
+    content="https://user-images.githubusercontent.com/97419543/214813489-d4260392-eecc-4897-ad60-6b7683579ddc.gif">
+  <meta property="og:description" content="아빠 : 박용택 ♡ 엄마 : 허보미">
+
+  <link rel="icon" href="./images/favicon.ico">
+  <link rel="stylesheet" type="text/css" href="./global.css?=v1.5" />
+  <title>선호의 첫 생일 파티에 초대합니다.</title>
+
+
 </head>
 
 <body>
