--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
   <meta property="og:description" content="아빠 : 박용택 ♡ 엄마 : 허보미">
 
   <link rel="icon" href="./images/favicon.ico">
-  <link rel="stylesheet" type="text/css" href="./global.css?=v1.5" />
-  <title>선호의 첫 생일 파티에 초대합니다.</title>
+  <link rel="stylesheet" type="text/css" href="./global.css?=v1.0" />
+  <title>민형소연</title>
 
 
 </head>
