--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-  <meta property="og:title" content="선호의 첫 생일 파티에 초대합니다.">
+  <meta property="og:title" content="강민형♡최소연 결혼식에 초대합니다.">
   <meta property="og:image"
-    content="https://user-images.githubusercontent.com/97419543/214813489-d4260392-eecc-4897-ad60-6b7683579ddc.gif">
-  <meta property="og:description" content="아빠 : 박용택 ♡ 엄마 : 허보미">
+    content="https://user-images.githubusercontent.com/97419543/221900776-7001396a-3437-487c-b3fd-ef18a0f5a2c3.PNG">
+  <meta property="og:description" content="강민형♡최소연">
 
   <link rel="icon" href="./images/favicon.ico">
-  <link rel="stylesheet" type="text/css" href="./global.css?=v1.0" />
-  <title>민형소연</title>
+  <link rel="stylesheet" type="text/css" href="./global.css?=v1.1" />
+  <title>강민형♡최소연 결혼식에 초대합니다.</title>
 
 
 </head>
